# qr-sampler

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CROSS-REPO-INTEGRATION.md  LEARNINGS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
deployments/: README.md
deployments/_template/: .env.example  README.md  docker-compose.yml
deployments/entropic-science/: .env.example  docker-compose.yml
deployments/firefly-1/: .env.example  README.md  docker-compose.yml
deployments/modal/: .env.example  Dockerfile.owui  Dockerfile.vllm  README.md  app.py  modal_secrets.md  owui_edge.py  vllm_serve.py
deployments/modal/tests/: conftest.py  test_vllm_serve_bearer.py
deployments/openentropy/: .env.example  README.md
deployments/qr-server/: README.md  qbert0g.config.yaml.example  qbert0g.service  qr-sampler-vllm.service  qr-server.env.example
deployments/urandom/: .env.example  README.md  docker-compose.yml
examples/open-webui/: README.md  _modal_warmth.py  bundle_owui_functions.py  entropic_science_profile.py  qr_comparison_pipe.json  qr_comparison_pipe.py  qr_sampler_filter.json  qr_sampler_filter.py
examples/open-webui/tests/: conftest.py  test_modal_warmth.py  test_qr_comparison_pipe_cold_start.py  test_qr_sampler_filter_cold_start.py  test_qr_sampler_filter_fallback_visibility.py
examples/servers/: qrng_template_server.py  simple_urandom_server.py  timing_noise_server.py
examples/systemd/: qr-entropy-server.service
scripts/: check.py
src/qr_sampler/: __init__.py  config.py  contract.py  contseq.py  presets.py  processor.py  qthought.py
src/qr_sampler/amplification/: __init__.py  ecdf.py  registry.py  server_side.py  zscore.py  zscore_thought.py
src/qr_sampler/cli/: info_cmd.py  list_cmd.py
src/qr_sampler/config/: __init__.py  model.py  presets.py  resolve.py
src/qr_sampler/connectors/modal/: Dockerfile.vllm  Dockerfile.vllm-prismaquant  README.md  app.py  cloudflared_sidecar.py  health_entropy_middleware.py  modal_secrets.md  vllm_patches.py  vllm_serve.py
src/qr_sampler/core/: pipeline.py  types.py
src/qr_sampler/engines/: registry.py  vllm.py
src/qr_sampler/engines/vllm/: __init__.py  adapter.py  health.py  telemetry.py
src/qr_sampler/entropy/: __init__.py  base.py  fallback.py  mock.py  named.py  openentropy.py  quantum.py  registry.py  status_file.py  system.py  timing.py
src/qr_sampler/entropy/qgrpc/: __init__.py  breaker.py  channel.py  preprobe.py  source.py  transport.py
src/qr_sampler/logging/: logger.py  types.py
src/qr_sampler/profiles/: __init__.py  loader.py  schema.py
src/qr_sampler/profiles/amplifiers/: zscore_mean.yaml  zscore_thought.yaml
src/qr_sampler/profiles/entropy/: openentropy.yaml  quantum_grpc.yaml  system.yaml  timing_noise.yaml
src/qr_sampler/profiles/presets/: chat_light.yaml  contseq.yaml  creative_sampling.yaml  normal_t1.yaml  qthought.yaml  qthought_purity.yaml  qthought_think.yaml  qthought_voice.yaml
src/qr_sampler/profiles/samplers/: belltemp.yaml  dynatemp.yaml  evdt_tt.yaml  gdt.yaml  mix_temperatures.yaml  ring_buffer_ar.yaml  tt_exchange.yaml
src/qr_sampler/proto/: entropy_service_pb2.py  purity_service.proto  purity_service_pb2.py  purity_service_pb2_grpc.py  wire.py
src/qr_sampler/selection/: selector.py
src/qr_sampler/telemetry/: __init__.py  status_file.py
src/qr_sampler/temperature/: __init__.py  base.py  belltemp.py  coherence_gate.py  dynatemp.py  edt.py  evdt_tt.py  fixed.py  gdt.py  hvh_drift.py  mix_temperatures.py  registry.py  ring_buffer_ar.py  tt_exchange.py
src/qr_sampler/templates/: docker-compose.yml.j2  env.j2
tests/: conftest.py  test_config.py  test_contract.py  test_contseq_roller.py  test_e2e_purity.py  test_language_scrub.py  test_layering.py  test_modal_health_entropy.py  test_open_webui_comparison_pipe.py  test_open_webui_integration.py  test_parameter_completeness.py  test_perf_telemetry.py  test_pipelined_prefetch.py  test_qthought_roller.py  test_statistical_properties.py  test_wire_format.py
tests/connectors/modal/: test_sleep_wake_event_order.py  test_vllm_serve_bearer.py
tests/test_amplification/: test_zscore.py  test_zscore_thought.py
tests/test_cli/: test_build.py  test_info_preset.py  test_list_presets.py
tests/test_core/: test_draw_mode.py  test_pipeline.py  test_strategy_seams.py
tests/test_deployments/: test_qr_server_profile.py
tests/test_engines/: test_bypass.py  test_hvh_drift_lifecycle.py  test_import_time_socket_guard.py  test_parallel_apply.py  test_registry.py  test_vllm_adapter.py  test_vllm_health.py  test_vllm_lp_abi.py
tests/test_entropy/: conftest.py  qgrpc_util.py  test_draw_transport.py  test_fallback.py  test_named.py  test_qgrpc_breaker.py  test_qgrpc_preprobe.py  test_qgrpc_source.py  test_qgrpc_transport.py  test_quantum.py  test_registry.py  test_status_file.py
tests/test_logging/: test_logger.py
tests/test_presets/: test_resolution.py  test_yaml_sync.py
tests/test_profiles/: test_loader.py  test_schema.py
tests/test_selection/: test_compact_topk.py  test_min_p.py  test_selector.py  test_truncate_first.py
tests/test_telemetry/: __init__.py  test_status_file.py
tests/test_temperature/: test_belltemp.py  test_coherence_gate.py  test_dynatemp.py  test_entropy_fastpath.py  test_evdt_tt.py  test_gdt.py  test_hvh_drift.py  test_mix_temperatures.py  test_ring_buffer_ar.py  test_tt_exchange.py
