[build-system]
requires = ["setuptools>=75.0", "setuptools-scm>=8.1"]
build-backend = "setuptools.build_meta"

[project]
name = "qr-sampler"
dynamic = ["version"]
description = "Plug any randomness source into LLM token sampling"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "qr-sampler contributors" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
readme = "README.md"
dependencies = [
    # vllm 0.6.6 (production base image) pins numpy<2.0.0; we only use
    # stable APIs (frombuffer/argpartition/searchsorted/cumsum/exp/etc.)
    # that work on both 1.x and 2.x, so the floor is the lowest 1.x we
    # actually exercise.
    "numpy>=1.26,<3",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.5.0",
    "grpcio>=1.68.0",
    "protobuf>=5.26.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/alchemystack/qr-sampler"
Repository = "https://github.com/alchemystack/qr-sampler"
Issues = "https://github.com/alchemystack/qr-sampler/issues"
Changelog = "https://github.com/alchemystack/qr-sampler/blob/main/CHANGELOG.md"

[project.scripts]
qr-sampler = "qr_sampler.cli.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "scipy>=1.12.0",
    "ruff>=0.8.0",
    "mypy>=1.10.0",
    "pre-commit>=4.0",
    "bandit>=1.8.0",
    "types-PyYAML>=6.0",
    "click>=8.0",
    "jinja2>=3.1",
    # Imported by the OWUI connector tests + health-entropy middleware; must be
    # present in CI so pytest collection and mypy resolution succeed.
    "httpx>=0.27",
    "fastapi>=0.110",
]
cli = [
    "click>=8.0",
    "jinja2>=3.1",
]
openentropy = [
    "openentropy>=0.10.0",
]
vllm = []
vllm-metal = []
modal = ["modal>=0.66,<1.0"]

[project.entry-points."vllm.logits_processors"]
qr_sampler = "qr_sampler.processor:QRSamplerLogitsProcessor"

[project.entry-points."qr_sampler.engine_adapters"]
vllm = "qr_sampler.engines.vllm:VLLMAdapter"

[project.entry-points."qr_sampler.entropy_sources"]
system = "qr_sampler.entropy.system:SystemEntropySource"
quantum_grpc = "qr_sampler.entropy.quantum:QuantumGrpcSource"
timing_noise = "qr_sampler.entropy.timing:TimingNoiseSource"
mock_uniform = "qr_sampler.entropy.mock:MockUniformSource"
openentropy = "qr_sampler.entropy.openentropy:OpenEntropySource"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"qr_sampler" = ["profiles/**/*.yaml", "templates/**/*.j2", "py.typed"]
"qr_sampler.connectors.modal" = ["Dockerfile.vllm", "modal_secrets.md", "README.md"]

[tool.setuptools_scm]
fallback_version = "0.1.0.dev0"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
markers = [
    "modal: tests that require a real Modal deploy + GPU container — skipped unless --run-modal is passed (Phase 2 R15(b))",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",       # pyflakes + pycodestyle
    "I",                  # isort
    "N",                  # pep8-naming
    "UP",                 # pyupgrade
    "B",                  # flake8-bugbear
    "SIM",                # flake8-simplify
    "TCH",                # flake8-type-checking
    "RUF",                # ruff-specific rules
]

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true
packages = ["qr_sampler"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["grpc", "grpc.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# follow_imports=skip stops mypy reading torch's bundled .pyi stubs, which
# both avoids a Windows-only decode crash on torch/_C/_VariableFunctions.pyi
# and keeps torch treated as untyped (consistent with ignore_missing_imports).
module = ["torch", "torch.*"]
ignore_missing_imports = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = "openentropy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["click", "click.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["jinja2", "jinja2.*"]
ignore_missing_imports = true

# Runtime-only / GPU / cross-package deps that are not installed in the CI
# typecheck job (vllm can't install without a GPU; modal/huggingface_hub are
# optional; obs + qr_llm_chat are mounted alongside only at Modal runtime).
# Treat them as untyped so `mypy --strict src/` resolves the connector code.
[[tool.mypy.overrides]]
module = [
    "vllm",
    "vllm.*",
    "modal",
    "modal.*",
    "fastapi",
    "fastapi.*",
    "httpx",
    "huggingface_hub",
    "huggingface_hub.*",
    "obs",
    "obs.*",
    "qr_llm_chat",
    "qr_llm_chat.*",
]
ignore_missing_imports = true

# The Modal connector methods are wrapped by untyped framework decorators
# (@app.cls, @modal.method, @modal.enter, ...); under --strict these otherwise
# trip disallow_untyped_decorators for every decorated method.
[[tool.mypy.overrides]]
module = ["qr_sampler.connectors.modal.*"]
disallow_untyped_decorators = false

# The vLLM V1 logits-processor base class resolves to Any (vllm untyped above),
# so subclassing it trips disallow_subclassing_any under --strict.
[[tool.mypy.overrides]]
module = ["qr_sampler.engines.vllm"]
disallow_subclassing_any = false

[tool.coverage.run]
source = ["src/qr_sampler"]
omit = [
    "src/qr_sampler/proto/*",
    # Modal-deployment connectors run only inside the Modal image (they need
    # modal + vllm + a GPU), so the CI unit-test job can't exercise them — they
    # are validated by actual deploys, not unit tests. The unit-testable
    # health_entropy_middleware stays measured.
    "src/qr_sampler/connectors/modal/app.py",
    "src/qr_sampler/connectors/modal/cloudflared_sidecar.py",
    "src/qr_sampler/connectors/modal/vllm_serve.py",
    "src/qr_sampler/connectors/modal/vllm_patches.py",
]

[tool.coverage.report]
fail_under = 90
show_missing = true

[tool.bandit]
# Every skipped check below is contextually justified for this Modal-hosted,
# subprocess-spawning, HF-downloading codebase:
#   B101 assert_used            - asserts guard internal invariants
#   B104 hardcoded_bind_all     - vllm serve MUST bind 0.0.0.0; Modal's
#                                 web_server proxies via the external iface and
#                                 loopback silently hangs (LEARNINGS iter-08)
#   B110 try_except_pass        - deliberate best-effort catches in lifecycle
#                                 / cleanup paths
#   B404 import_subprocess      - subprocess spawns `vllm serve` + the
#   B603 subprocess_no_shell    - cloudflared sidecar, always with a fixed
#   B607 start_process_partial  - list of args (shell=False, no injection)
#   B615 huggingface_download   - snapshot_download's revision is pinned by the
#                                 qr-llm-chat predeploy gate (the conditional
#                                 assignment is invisible to bandit statically)
skips = ["B101", "B104", "B110", "B404", "B603", "B607", "B615"]
